fix margin when banner is not visible in categories

--- a/scss/manjaro.scss
+++ b/scss/manjaro.scss
@@ -330,3 +330,7 @@ body.has-full-page-chat #main-outlet {
     margin-bottom: 1.5em;
   }
 }
+
+.navigation-categories .above-main-container-outlet.search-banner {
+  margin: 0;
+}
